# Visio-Studio

./: CMakeLists.txt  README.md
docs/: ai_features.md  architecture.md  effect.md  schema.md  specs.md  ui-ux.md
resources/: resources.qrc
resources/styles/: main.qss
src/: main.cpp
src/ai/: generator.cpp  generator.h
src/core/: engine.cpp  engine.h  project.cpp  project.h
src/effects/basic/: basic.cpp  basic.h
src/effects/dithering/: dithering.cpp  dithering.h
src/effects/glitch/: glitch.cpp  glitch.h  glitch.json
src/gui/: canvas.cpp  canvas.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mixer.cpp  mixer.h
src/plugins/: baseplugin.cpp  baseplugin.h  plugininterface.h  pluginmanager.cpp  pluginmanager.h
